@@ -1,3 +1,7 @@
+2010-03-29 Magnus Hagdorn
+ * libglide/glide.F90: use new API
+ * libglide/glide_velo.F90: refactor calcVerticalVelocity
+
 2010-03-29 Ian Rutt
  * libglide/glide_thck.F90, libglimmer/glimmer_slap.F90: Fixed memory leak
    from slap wrapper.
